tinkar-core pom mod